--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZAZA</title>
+    <title>PLN GUNZozio</title>
     <style>
         * {
             margin: 0;
@@ -1170,9 +1170,9 @@
             video402: { url: "https://www.youtube.com/embed/hsVlgnPXVec?si=X5iSjG5OiWUfnfma", title: "West Side Story", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de la chanson <i>America</i> extraite de la comédie musicale <i>West Side Story</i> de Léonard Bernstein." },
             video403: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Indiana Jones", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation du thème principal d'<i>Indiana Jones</i> de John Williams" },
             project5: { url: "https://www.youtube.com/embed/O70wUdl1PEc?si=zsbu0HBB9cfSIsvU", title: "Concert de fin de stage", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
-            video501: { url: "https://www.youtube.com/embed/ivcBJ4Bbm68?si=SPurQwCu06-_XQws", title: "Techno - J. Kindle", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de l'<i>Ode à la Joie</i> de Ludwig van Beethoven." },
-            video502: { url: "https://www.youtube.com/embed/hsVlgnPXVec?si=X5iSjG5OiWUfnfma", title: "Etude Op.60 N°19 - M. Carcassi", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de la chanson <i>America</i> extraite de la comédie musicale <i>West Side Story</i> de Léonard Bernstein." },
-            video503: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Valses poétiques - E. Granados", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation du thème principal d'<i>Indiana Jones</i> de John Williams" },
+            video501: { url: "https://www.youtube.com/embed/ivcBJ4Bbm68?si=SPurQwCu06-_XQws", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
+            video502: { url: "https://www.youtube.com/embed/EgIlAg4hvE4?si=2Ioj0O4KEa-1zNjG", title: "Etude Op.60 N°19 - M. Carcassi", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
+            video503: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Valses poétiques - E. Granados", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
             project6: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 6", description: "Description du projet 6..." },
             project7: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 7", description: "Description du projet 7..." },
             project8: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 8", description: "Description du projet 8..." },
@@ -1200,7 +1200,7 @@
     video403: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CISr5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLCSBtt5PJHI0I12Dp21L5Nz3vqWBQ",
     project5: "https://i9.ytimg.com/vi_webp/O70wUdl1PEc/mq2.webp?sqp=CPDS5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGFYgYihlMA8=&rs=AOn4CLBHqb1ZwYaVcH5Wd_mk7viqK-XZ8A",
     video501: "https://i9.ytimg.com/vi_webp/ivcBJ4Bbm68/mq2.webp?sqp=CLS05sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWChAMA8=&rs=AOn4CLBa-8J_E7_Mep5ggSaAOxhwkzDheA",
-    video502: "https://i9.ytimg.com/vi/hsVlgnPXVec/mqdefault.jpg?sqp=CISr5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWShBMA8=&rs=AOn4CLB1Xd8xeSgXxjBSb1qBDW5Z79RysA",
+    video502: "https://i9.ytimg.com/vi/EgIlAg4hvE4/mqdefault.jpg?sqp=CKDc5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLAejsqrBuGEHlW2sdWoenmYGBKcig",
     video503: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CISr5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLCSBtt5PJHI0I12Dp21L5Nz3vqWBQ",
     project6: "https://media.giphy.com/media/26xBzdT9i8m7Dq1k4/giphy.gif",
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
@@ -1897,6 +1897,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
