--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
             video403: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Indiana Jones", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation du thème principal d'<i>Indiana Jones</i> de John Williams" },
             project5: { url: "https://www.youtube.com/embed/O70wUdl1PEc?si=zsbu0HBB9cfSIsvU", title: "Concert de fin de stage", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
             video501: { url: "https://www.youtube.com/embed/ivcBJ4Bbm68?si=SPurQwCu06-_XQws", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
-            video502: { url: "https://www.youtube.com/embed/EgIlAg4hvE4?si=2Ioj0O4KEa-1zNjG", title: "Etude Op.60 N°19 - M. Carcassi", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
+            video502: { url: "https://www.youtube.com/embed/EgIlAg4hvE4?si=2Ioj0O4KEa-1zNjG", title: "Etude Op.60 N°19 - M. Carcassi", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une étude de Matteo Carcassi (compositeur italien du début du 19ème siécle)" },
             video503: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Valses poétiques - E. Granados", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
             project6: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 6", description: "Description du projet 6..." },
             project7: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 7", description: "Description du projet 7..." },
@@ -1897,6 +1897,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
