--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZozio</title>
+    <title>PLN GUNZoziotest</title>
     <style>
         * {
             margin: 0;
@@ -946,8 +946,11 @@
     <section class="hero" id="hero">
         <div class="mosaic-container" id="mosaic">
             <div class="mosaic-item" data-project="project1">
-                <img src="https://media.giphy.com/media/3o6Zta2kQfOv1oXz4Q/giphy.gif" alt="Performance Live">
-                <div class="content">
+              <video autoplay muted loop playsinline>
+                  <source src="https://www.youtube.com/embed/z_-hvIcoraU?si=tj3naiugk3v-g-iF" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video> 
+            <div class="content">
                     <h1>Projet 1</h1>
                     <button onclick="showVideo('project1')">Lire la vidéo</button>
                 </div>
@@ -1897,6 +1900,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
