--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZoziotest</title>
+    <title>PLN GUNZoziotestox</title>
     <style>
         * {
             margin: 0;
@@ -947,7 +947,7 @@
         <div class="mosaic-container" id="mosaic">
             <div class="mosaic-item" data-project="project1">
               <video autoplay muted loop playsinline>
-                  <source src="https://www.youtube.com/embed/z_-hvIcoraU?si=tj3naiugk3v-g-iF" type="video/mp4">
+                  <source src="https://www.youtube.com/embed/z_-hvIcoraU?si=tj3naiugk3v-g-iF" type="video/mov">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
             <div class="content">
@@ -1900,6 +1900,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
