--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZozioteoi</title>
+    <title>PLN GUNZglazbaldouille</title>
     <style>
         * {
             margin: 0;
@@ -1173,9 +1173,9 @@
             video402: { url: "https://www.youtube.com/embed/hsVlgnPXVec?si=X5iSjG5OiWUfnfma", title: "West Side Story", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation de la chanson <i>America</i> extraite de la comédie musicale <i>West Side Story</i> de Léonard Bernstein." },
             video403: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Indiana Jones", description: "L’ensemble Cordissimo rassemble les élèves des classes d’Alto, Contrebasse, Violon et Violoncelle du Cycle 2 du conservatoire de Rennes. Dans cet extrait de leur concert, les instrumentistes présentent une adaptation du thème principal d'<i>Indiana Jones</i> de John Williams" },
             project5: { url: "https://www.youtube.com/embed/O70wUdl1PEc?si=zsbu0HBB9cfSIsvU", title: "Concert de fin de stage", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
-            video501: { url: "https://www.youtube.com/embed/ivcBJ4Bbm68?si=SPurQwCu06-_XQws", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
+            video501: { url: "https://www.youtube.com/embed/z2Ge4Et5-98?si=UBGoMDYYAk_iSO9U", title: "Techno - J. Kindle", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une pièce d'ensemble <i>Techno</i> de Jürg Kindle, compositeur suisse contemporain." },
             video502: { url: "https://www.youtube.com/embed/EgIlAg4hvE4?si=2Ioj0O4KEa-1zNjG", title: "Etude Op.60 N°19 - M. Carcassi", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, une étude de Matteo Carcassi (compositeur italien du début du 19ème siécle)" },
-            video503: { url: "https://www.youtube.com/embed/IA88ixP2fzk?si=HIAcC7jMCRJE6jqC", title: "Valses poétiques - E. Granados", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective." },
+            video503: { url: "https://www.youtube.com/embed/CKqNgZslIKU?si=oi3QwpMIiM8-KZF2", title: "Valses poétiques - E. Granados", description: "Le stage de Guitare Classique du Maestro Jean-François Ruiz a lieu chaque été dans le village de Py (Pyrénées-Orientales). Il rassemble des guitaristes de tous niveaux qui, pendant une semaine, se perfectionnent tant dans la pratique individuelle que collective. <br><br> Ici, les quatre premières valses poétiques de Enrique Granados." },
             project6: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 6", description: "Description du projet 6..." },
             project7: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 7", description: "Description du projet 7..." },
             project8: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 8", description: "Description du projet 8..." },
@@ -1202,9 +1202,9 @@
     video402: "https://i9.ytimg.com/vi/hsVlgnPXVec/mqdefault.jpg?sqp=CISr5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWShBMA8=&rs=AOn4CLB1Xd8xeSgXxjBSb1qBDW5Z79RysA",
     video403: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CISr5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLCSBtt5PJHI0I12Dp21L5Nz3vqWBQ",
     project5: "https://i9.ytimg.com/vi_webp/O70wUdl1PEc/mq2.webp?sqp=CPDS5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGFYgYihlMA8=&rs=AOn4CLBHqb1ZwYaVcH5Wd_mk7viqK-XZ8A",
-    video501: "https://i9.ytimg.com/vi_webp/ivcBJ4Bbm68/mq2.webp?sqp=CLS05sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgWChAMA8=&rs=AOn4CLBa-8J_E7_Mep5ggSaAOxhwkzDheA",
+    video501: "https://i9.ytimg.com/vi/z2Ge4Et5-98/mqdefault.jpg?sqp=CKiA6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGQgZShSMA8=&rs=AOn4CLBU_L1qT12h5yw4i9mesoSOkU9T-w",
     video502: "https://i9.ytimg.com/vi/EgIlAg4hvE4/mqdefault.jpg?sqp=CKDc5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLAejsqrBuGEHlW2sdWoenmYGBKcig",
-    video503: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CISr5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLCSBtt5PJHI0I12Dp21L5Nz3vqWBQ",
+    video503: "https://i9.ytimg.com/vi/CKqNgZslIKU/mqdefault.jpg?sqp=CJiZ58UG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgWShAMA8%3D&rs=AOn4CLACtbyK7MnfI1UCemBGST-ypK0fYg&retry=4",
     project6: "https://media.giphy.com/media/26xBzdT9i8m7Dq1k4/giphy.gif",
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
     project8: "https://media.giphy.com/media/3o7aDcz6By4yX8Wn3G/giphy.gif",
@@ -1900,6 +1900,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
