--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
     video403: "https://i9.ytimg.com/vi/IA88ixP2fzk/mqdefault.jpg?sqp=CICF6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUihIMA8=&rs=AOn4CLD-8kcHBSB7xJMmUtqeNdZ5__f9gw",
     project5: "https://i9.ytimg.com/vi_webp/O70wUdl1PEc/mq2.webp?sqp=CPDS5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGFYgYihlMA8=&rs=AOn4CLBHqb1ZwYaVcH5Wd_mk7viqK-XZ8A",
     video501: "https://i9.ytimg.com/vi/z2Ge4Et5-98/mqdefault.jpg?sqp=CKiA6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGQgZShSMA8=&rs=AOn4CLBU_L1qT12h5yw4i9mesoSOkU9T-w",
-    video502: "https://i9.ytimg.com/vi/EgIlAg4hvE4/mqdefault.jpg?sqp=CKDc5sUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLAejsqrBuGEHlW2sdWoenmYGBKcig",
+    video502: "https://i9.ytimg.com/vi_webp/EgIlAg4hvE4/mq2.webp?sqp=CLCO6MUG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGEsgYShlMA8=&rs=AOn4CLBWtTB04F_M7esBTU0gDcsetsAxuQ",
     video503: "https://i9.ytimg.com/vi/CKqNgZslIKU/mqdefault.jpg?sqp=CJiZ58UG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgWShAMA8%3D&rs=AOn4CLACtbyK7MnfI1UCemBGST-ypK0fYg&retry=4",
     project6: "https://media.giphy.com/media/26xBzdT9i8m7Dq1k4/giphy.gif",
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
@@ -1900,6 +1900,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
