--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZbanzulaiy</title>
+    <title>PLN GUNZpaznavouille</title>
     <style>
         * {
             margin: 0;
@@ -947,7 +947,7 @@
         <div class="mosaic-container" id="mosaic">
             <div class="mosaic-item" data-project="project1">
               <video autoplay muted loop playsinline>
-                  <source src="guitare_loop" type="video/mp4">
+                  <source src="guitare_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
             <div class="content">
@@ -1900,6 +1900,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
