--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZpaznavouille</title>
+    <title>PLN GUNZbizboundar</title>
     <style>
         * {
             margin: 0;
@@ -113,6 +113,16 @@
             object-fit: cover;
             z-index: 1;
         }
+        
+         .mosaic-item video {
+           position: absolute;
+           top: 0;
+           left: 0;
+           width: 100%;
+           height: 100%;
+           object-fit: cover; /* Ensures video fills container without distortion */
+           z-index: -1; /* Places video behind other content */
+       }
 
         .mosaic-item .content {
             text-align: center;
@@ -950,7 +960,7 @@
                   <source src="guitare_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
-            <div class="content">
+               <div class="content">
                     <h1>Projet 1</h1>
                     <button onclick="showVideo('project1')">Lire la vidéo</button>
                 </div>
@@ -1900,6 +1910,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
