--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZbizboundar</title>
+    <title>PLN GUNbabar</title>
     <style>
         * {
             margin: 0;
@@ -984,7 +984,10 @@
                 <div class="arrow arrow-left">❮</div>
             </div>
             <div class="mosaic-item" data-project="project4">
-                <img src="https://media.giphy.com/media/xT9IgzoZZ0xxInIgZq/giphy.gif" alt="Concert de Conservatoire">
+              <video autoplay muted loop playsinline>
+                  <source src="orchestre_loop.mp4" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video> 
                 <div class="content">
                     <h1>Concert de Conservatoire</h1>
                     <button onclick="showVideo('project4')">Lire la vidéo</button>
@@ -1910,6 +1913,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
