--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,10 @@
                 <div class="arrow arrow-left">❮</div>
             </div>
             <div class="mosaic-item" data-project="project7">
-                <img src="https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif" alt="Performance Acoustique">
+               <video autoplay muted loop playsinline>
+                  <source src="nature_loop.mp4" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video> 
                 <div class="content">
                     <h1>Projet 7</h1>
                     <button onclick="showVideo('project7')">Lire la vidéo</button>
@@ -1917,6 +1920,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
