--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
             </div>
             <div class="mosaic-item" data-project="project7">
                <video autoplay muted loop playsinline>
-                  <source src="nature_loop.mp4" type="video/mp4">
+                  <source src="cascade_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
@@ -1023,7 +1023,10 @@
                 <div class="arrow arrow-right">❯</div>
             </div>
             <div class="mosaic-item" data-project="project8">
-                <img src="https://media.giphy.com/media/3o7aDcz6By4yX8Wn3G/giphy.gif" alt="Clip Experimental">
+               <video autoplay muted loop playsinline>
+                  <source src="nature_loop.mp4" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video> 
                 <div class="content">
                     <h1>Projet 8</h1>
                     <button onclick="showVideo('project8')">Lire la vidéo</button>
@@ -1920,6 +1923,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
