--- a/index.html
+++ b/index.html
@@ -1004,8 +1004,10 @@
                 <div class="arrow arrow-right">❯</div>
             </div>
             <div class="mosaic-item" data-project="project6">
-                <img src="https://media.giphy.com/media/26xBzdT9i8m7Dq1k4/giphy.gif" alt="Documentaire Musical">
-                <div class="content">
+               <video autoplay muted loop playsinline>
+                  <source src="Acigne_loop.mp4" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video>                 <div class="content">
                     <h1>Projet 6</h1>
                     <button onclick="showVideo('project6')">Lire la vidéo</button>
                 </div>
@@ -1923,6 +1925,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
