--- a/index.html
+++ b/index.html
@@ -1040,9 +1040,11 @@
                 <div class="arrow arrow-right">❯</div>
             </div>
             <div class="mosaic-item" data-project="project9">
-                <img src="https://media.giphy.com/media/3o6ZtaO9BZHcOjmErm/giphy.gif" alt="Live Studio">
-                <div class="content">
-                    <h1>Projet 9</h1>
+                <video autoplay muted loop playsinline>
+                  <source src="magnolia_loop.mp4" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video>                 <div class="content">
+                    <h1>Jardin de rêve</h1>
                     <button onclick="showVideo('project9')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1928,6 +1930,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
