--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
-                    <h1>Projet 7</h1>
+                    <h1>Montagne</h1>
                     <button onclick="showVideo('project7')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
@@ -1033,7 +1033,7 @@
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
-                    <h1>Projet 8</h1>
+                    <h1>Biodiversité</h1>
                     <button onclick="showVideo('project8')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1930,6 +1930,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
