--- a/index.html
+++ b/index.html
@@ -1010,8 +1010,9 @@
                <video autoplay muted loop playsinline>
                   <source src="Acigne_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
-               </video>                 <div class="content">
-                    <h1>Projet 6</h1>
+               </video>                 
+                <div class="content">
+                    <h1>Concert thématique</h1>
                     <button onclick="showVideo('project6')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1930,6 +1931,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
