--- a/index.html
+++ b/index.html
@@ -1063,9 +1063,12 @@
                 <div class="arrow arrow-right">❯</div>
             </div>
             <div class="mosaic-item" data-project="project11">
-                <img src="https://media.giphy.com/media/26FPy3G0rLKBPlrB6/giphy.gif" alt="Visualisation Musicale">
+               <video autoplay muted loop playsinline>
+                  <source src="ski_loop.mp4" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video> 
                 <div class="content">
-                    <h1>Projet 11</h1>
+                    <h1>Ski</h1>
                     <button onclick="showVideo('project11')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1931,6 +1934,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
