--- a/index.html
+++ b/index.html
@@ -1068,16 +1068,18 @@
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                 <div class="content">
-                    <h1>Ski</h1>
+                    <h1>Sports de plein air</h1>
                     <button onclick="showVideo('project11')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
                 <div class="arrow arrow-right">❯</div>
             </div>
             <div class="mosaic-item" data-project="project12">
-                <img src="https://media.giphy.com/media/3o7TKF0r3wY2f2gQ6k/giphy.gif" alt="Show Live">
-                <div class="content">
-                    <h1>Projet 12</h1>
+               <video autoplay muted loop playsinline>
+                  <source src="yoga_loop.mp4" type="video/mp4">
+                   Your browser does not support the video tag. <!-- Fallback text -->
+               </video>                 <div class="content">
+                    <h1>Autres sports en salles</h1>
                     <button onclick="showVideo('project12')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1934,6 +1936,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
