--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                </video> 
 
                 <div class="content">
-                    <h1>Tir à l'arc</h1>
+                    <h1>Sports en salle</h1>
                     <button onclick="showVideo('project10')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
@@ -1079,7 +1079,7 @@
                   <source src="yoga_loop.mp4" type="video/mp4">
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video>                 <div class="content">
-                    <h1>Autres sports en salles</h1>
+                    <h1>Autres sports</h1>
                     <button onclick="showVideo('project12')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-left">❮</div>
@@ -1936,6 +1936,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
