--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
                    Your browser does not support the video tag. <!-- Fallback text -->
                </video> 
                <div class="content">
-                    <h1>Projet 1</h1>
+                    <h1>Derniers projets</h1>
                     <button onclick="showVideo('project1')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
@@ -1936,6 +1936,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
