--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNbabar</title>
+    <title>PLN GUNyuyu</title>
     <style>
         * {
             margin: 0;
@@ -2026,6 +2026,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
