--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNyuyu</title>
+    <title>PLN GUNuouo</title>
     <style>
         * {
             margin: 0;
@@ -1296,19 +1296,19 @@ async function fetchThumbnailUrl(videoId, videoKey) {
 }
 
 // Exemple d'utilisation
-const videoId = videoData['video401']; // ID de la vidéo YouTube
-const videoKey = 'video401'; // Clé dans votre constante
+//const videoId = videoData['video401']; // ID de la vidéo YouTube
+//const videoKey = 'video401'; // Clé dans votre constante
 
 // Appeler la fonction pour mettre à jour thumbnailUrls
-fetchThumbnailUrl(videoId, videoKey).then(() => {
+//fetchThumbnailUrl(videoId, videoKey).then(() => {
   // Afficher la constante mise à jour
-  console.log('Constantes thumbnailUrls :', thumbnailUrls);
-});
+//  console.log('Constantes thumbnailUrls :', thumbnailUrls);
+//});
 
 // Exemple d'accès ultérieur à la constante
-setTimeout(() => {
-  console.log('Accès à la vignette de video401 :', thumbnailUrls.video401);
-}, 2000); // Simule un accès ultérieur
+//setTimeout(() => {
+//  console.log('Accès à la vignette de video401 :', thumbnailUrls.video401);
+//}, 2000); // Simule un accès ultérieur
 
 
 
@@ -2026,6 +2026,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
