--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNuouo</title>
+    <title>PLN GUNapap</title>
     <style>
         * {
             margin: 0;
@@ -1266,7 +1266,7 @@ let thumbnailUrls = {
     video103: "https://i.ytimg.com/vi/ceQZvVofQN8/hqdefault.jpg?sqp=-oaymwFBCPYBEIoBSFryq4qpAzMIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB8AEB-AH-CYAC0AWKAgwIABABGGUgUyhBMA8=&rs=AOn4CLCPSZhX2hJir2ka3lZc59rywsKn9Q",
     video104: "https://i.ytimg.com/vi/Ln7A_6Uf8tY/hqdefault.jpg?sqp=-oaymwEnCPYBEIoBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLATkCvh40Sw2h8wxSA1ec6yv0WeNA"
 };
-
+/*
 // Fonction pour récupérer l'URL de la vignette
 async function fetchThumbnailUrl(videoId, videoKey) {
   try {
@@ -1294,7 +1294,7 @@ async function fetchThumbnailUrl(videoId, videoKey) {
     console.error('Erreur lors de la récupération de la vignette :', error.message);
   }
 }
-
+*/
 // Exemple d'utilisation
 //const videoId = videoData['video401']; // ID de la vidéo YouTube
 //const videoKey = 'video401'; // Clé dans votre constante
@@ -2026,6 +2026,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
