--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNapap</title>
+    <title>PLN GUNpopo</title>
     <style>
         * {
             margin: 0;
@@ -1239,7 +1239,7 @@ const axios = require('axios'); // Utilisez axios pour les requêtes HTTP (ou fe
 const API_KEY = 'AIzaSyD7UGkJeO6DrgZjBkC4GXpsOO0VSxWr2K4';
 
 // Votre constante pour stocker les URLs des vignettes
-let thumbnailUrls = {
+const thumbnailUrls = {
     project1: "https://media.giphy.com/media/3o6Zta2kQfOv1oXz4Q/giphy.gif",
     project2: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
     project3: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
@@ -2026,6 +2026,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
