--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNpopo</title>
+    <title>PLN GUNGUN</title>
     <style>
         * {
             margin: 0;
@@ -1244,14 +1244,14 @@ const thumbnailUrls = {
     project2: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
     project3: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
     project4: "https://media.giphy.com/media/xT9IgzoZZ0xxInIgZq/giphy.gif",
-    video401: '', // Initialisation vide, sera mise à jour dynamiquement
-    video402: '' // Initialisation vide, sera mise à jour dynamiquement,
-    video403: '' // Initialisation vide, sera mise à jour dynamiquement,
-    project5: '' // Initialisation vide, sera mise à jour dynamiquement,
-    video501: '' // Initialisation vide, sera mise à jour dynamiquement,
-    video502: '' // Initialisation vide, sera mise à jour dynamiquement,
-    video503: '' // Initialisation vide, sera mise à jour dynamiquement,
-    project6: '' // Initialisation vide, sera mise à jour dynamiquement,
+    video401: "" // Initialisation vide, sera mise à jour dynamiquement,
+    video402: "" // Initialisation vide, sera mise à jour dynamiquement,
+    video403: "" // Initialisation vide, sera mise à jour dynamiquement,
+    project5: "" // Initialisation vide, sera mise à jour dynamiquement,
+    video501: "" // Initialisation vide, sera mise à jour dynamiquement,
+    video502: "" // Initialisation vide, sera mise à jour dynamiquement,
+    video503: "" // Initialisation vide, sera mise à jour dynamiquement,
+    project6: "" // Initialisation vide, sera mise à jour dynamiquement,
     project7: "https://media.giphy.com/media/xT9IgG2xK7z4z6z6hW/giphy.gif",
     project8: "https://media.giphy.com/media/3o7aDcz6By4yX8Wn3G/giphy.gif",
     project9: "https://media.giphy.com/media/3o6ZtaO9BZHcOjmErm/giphy.gif",
@@ -2026,6 +2026,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
